--- a/package.json
+++ b/package.json
@@ -1,14 +1,31 @@
 {
   "name": "pdf-cutter",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "private": true,
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "description": "Cuts and converts the provided PDF file into multiple image files",
+  "author": {
+    "name": "Peter Dyumin",
+    "url": "https://github.com/peterdee"
   },
-  "keywords": [],
-  "author": "",
+  "homepage": "https://github.com/peterdee/pdf-cutter",
+  "main": "index.js",
+  "scripts": {
+    "start": "node ./index.js"
+  },
+  "engines": {
+    "node": "12.16.1",
+    "npm": "6.14.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/peterdee/pdf-cutter"
+  },
+  "keywords": [
+    "Node",
+    "PDF",
+    "PDF2Pic",
+    "PDF.js"
+  ],
   "license": "ISC",
   "dependencies": {
     "pdf2pic": "^1.3.13",
