--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pdf-cutter",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
   "description": "Cuts and converts the provided PDF file into multiple image files",
   "author": {
@@ -10,11 +10,12 @@
   "homepage": "https://github.com/peterdee/pdf-cutter",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint",
     "start": "node ./index.js"
   },
   "engines": {
-    "node": "12.16.1",
-    "npm": "6.14.2"
+    "node": ">=16.0.0",
+    "npm": ">=7.0.0"
   },
   "repository": {
     "type": "git",
@@ -26,9 +27,14 @@
     "PDF2Pic",
     "PDF.js"
   ],
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
-    "pdf2pic": "^1.3.13",
-    "pdfjs-dist": "^2.2.228"
+    "pdf2pic": "^2.1.4",
+    "pdfjs-dist": "^2.10.377"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.24.2"
   }
 }
